feat: remove X-Sha256-checksum header when downloading
Refs: MK8S-246
